# algorithm_library

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: github-actions-demo.yml
apps/benchmark/: CMakeLists.txt
apps/benchmark/src/: benchmark_algorithms.cpp
apps/juce/visualizer_components/src/: spectrogram_component.h
apps/spectrogramzer/: CMakeLists.txt
apps/spectrogramzer/src/: main.cpp  rescale_spectrogram.h  save_spectrogram.h  spectrogram_adaptive_zeropad_process.h  spectrogram_process.h
apps/unit_test/: CMakeLists.txt  CMakePresets.json
apps/unit_test/include/: unit_test.h
apps/unit_test/src/: adaptive_predictor_comparison_unit_test.cpp  adaptive_predictor_kalman_freq_domain_unit_test.cpp  adaptive_predictor_kalman_time_domain_unit_test.cpp  adaptive_predictor_nlms_time_domain_unit_test.cpp  audio_attenuate_unit_test.cpp  circular_buffer_unit_test.cpp  convert_rgba._unit_test.cpp  critical_bands_bark_unit_test.cpp  dc_remover_first_order_unit_test.cpp  design_iir_min_phase_unit_test.cpp  downsampling_unit_test.cpp  filterbank_set_unit_test.cpp  filterbank_single_channel_unit_test.cpp  filterbank_wola_unit_test.cpp  moving_max_min_test.cpp  perceptual_spectral_analysis_unit_test.cpp  preprocessing_path_unit_test.cpp  scale_transform_unit_test.cpp  spectrogram_adaptive_set_unit_test.cpp  spectrogram_adaptive_unit_test.cpp  spectrogram_nonlinear_unit_test.cpp  spectrogram_set_unit_test.cpp  upscale2d_linear.unit_test.cpp  upscale2d_linear_unit_test.cpp
docs/superpowers/specs/: 2026-04-27-torch-modules-perceptual-adaptive-spectrogram-design.md
include/algorithm_library/: adaptive_predictor.h  audio_attenuate.h  bandsplit_downsample.h  convert_rgba.h  filterbank.h  filterbank_set.h  perceptual_spectral_analysis.h  scale_transform.h  spectrogram.h  spectrogram_adaptive.h  spectrogram_adaptive_set.h  spectrogram_set.h
include/algorithm_library/interface/: helper_functions.h  input_output.h  interface.h  public_algorithm.h
libs/audio_transformer/: CMakeLists.txt  README.md  dump.txt
libs/audio_transformer/src/: audio_attenuate_wasm.cpp
libs/audio_transformer/test/: stateful_demo.html
libs/pyplot_cpp/include/pyplot_cpp/: pyplot_cpp.h
libs/pyplot_cpp/src/: pyplot_cpp.cpp
libs/pyplot_cpp/test/: CMakeLists.txt  test.cpp
libs/python_algorithm_library/: CMakeLists.txt
libs/python_algorithm_library/python_script/: spectrogram.py  test_perceptual_spectral_analysis.py
libs/python_algorithm_library/src/: main.cpp
libs/torch_modules/: .gitignore  README.md  pyproject.toml
libs/torch_modules/tests/: benchmark_perceptual_adaptive_spectrogram.py  conftest.py  test_interpolation_cubic_alignment.py  test_log_scale_alignment.py  test_moving_max_min.py  test_perceptual_adaptive_spectrogram_alignment.py  test_perceptual_adaptive_spectrogram_edge_cases.py  test_spectrogram_adaptive_moving_alignment.py
libs/torch_modules/torch_modules/: __init__.py
libs/torch_modules/torch_modules.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/torch_modules/torch_modules/interpolation/: interpolation_cubic.py
libs/torch_modules/torch_modules/perceptual_spectral_analysis/: log_scale.py  moving_max_min.py  perceptual_adaptive_spectrogram.py  spectrogram_adaptive_moving.py
src/adaptive_predictor/: adaptive_predictor.cpp  adaptive_predictor_kalman_freq_domain.h  adaptive_predictor_kalman_time_domain.h  adaptive_predictor_nlms_freq_domain.h  adaptive_predictor_nlms_moment.h  adaptive_predictor_nlms_moment_time_domain.h  adaptive_predictor_nlms_time_domain.h
src/audio_attenuate/: audio_attenuate.cpp  audio_attenuate_adaptive.h  audio_combine.h  audio_combine_max.h  decimate_gain.h
src/bandsplit_downsample/: bandsplit_downsample_chebyshev.h
src/beamformer/: beamformer_mvdr.h
src/convert_rgba/: convert_rgba.cpp  convert_rgba_variations.h
src/dc_remover/: dc_remover_first_order.h
src/delay/: circular_buffer.h
src/downsampling/: downsampling_2nd_dim.h
src/fft/: fft.cpp
src/filter_min_max/: filter_min_max_lemire.h
src/filterbank/: filterbank.cpp  filterbank_simple.h  filterbank_single_channel.h  filterbank_wola.h
src/filterbank_set/: filterbank_set_wola.h
src/framework/: base_algorithm.h
src/moving_max_min/: moving_max_min_horizontal.h  moving_max_min_vertical.h  moving_max_min_vertical2.h
src/perceptual_spectral_analysis/: perceptual_adaptive_spectrogram.h  perceptual_nonlinear_spectrogram.h  perceptual_spectral_analysis.cpp  perceptual_spectrogram.h
src/preprocessing_path/: beamformer_path.h
src/scale_transform/: log_scale.h  mel_scale.h  scale.py  scale_transform.cpp
src/single_channel_path/: noise_reduction_path.h
src/spectral_compressor/: spectral_compressor_wola.h  spectral_selector.h
src/spectrogram/: spectrogram.cpp  spectrogram_filterbank.h  spectrogram_min_max.h  spectrogram_nonlinear.h  spectrogram_set.h
src/spectrogram_adaptive/: spectrogram_adaptive.cpp  spectrogram_adaptive_combine.h  spectrogram_adaptive_envelope.h  spectrogram_adaptive_full_resolution.h  spectrogram_adaptive_min_max.h  spectrogram_adaptive_moving.h  spectrogram_adaptive_neighbour.h  spectrogram_adaptive_upscale.h  spectrogram_adaptive_wola.h  spectrogram_adaptive_zeropad.h  upscale2d_linear.h
src/spectrogram_adaptive_set/: spectrogram_adaptive_set.cpp  spectrogram_adaptive_set_min.h
src/spectrogram_set/: spectrogram_set.cpp  spectrogram_set_min_max.h  spectrogram_set_wola.h  spectrogram_set_zeropad.h
src/utilities/: pffft.c
