[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_modules"
version = "0.1.0"
description = "PyTorch ports of algorithm_library algorithms (training-time feature extractors)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-benchmark>=4",
]

[tool.setuptools.packages.find]
include = ["torch_modules*"]
